fix: ManagementUserAccount module fixes